--- a/css/style-producto.css
+++ b/css/style-producto.css
@@ -11,13 +11,14 @@ header {
 
 .caja {
     width: 940px;
+    height: 150px;
     position: relative;
     margin: 0 auto;
 }
 
 nav {
     position: absolute;
-    top: 110px;
+    top: 80px;
     right: 0px;
 }
 
@@ -27,6 +28,7 @@ nav li {
 }
 
 nav a {
+    font-family: 'Texturina', serif;
     text-transform: uppercase;
     color: #000000;
     font-weight: bold;
@@ -75,6 +77,7 @@ nav a:hover {
 }
 
 .productos h2 {
+    font-family: 'Texturina', serif;
     font-size: 30px;
     font-weight: bold;
 }
@@ -125,13 +128,14 @@ footer {
 
     .caja {
         width: auto;
+        height: 200px;
     }
 
     .productos {
         width: 100%;
     }
 
-    .productos li{
+    .productos li {
         display: block;
         text-align: center;
         width: 80%;
